--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </tr>
             <tr>
                 <td>Task 3</td>
-                <td><a href="task3.html">Link 3</a></td>
+                <td><a href="Task3.html">Link 3</a></td>
             </tr>
             <tr>
                 <td>Task 4</td>
-                <td><a href="task4.html">Link 4</a></td>
+                <td><a href="Task4.html">Link 4</a></td>
             </tr>
             <tr>
                 <td>Task 5</td>
@@ -42,7 +42,7 @@
             </tr>
             <tr>
                 <td>Task 6</td>
-                <td><a href="task6.html">Link 6</a></td>
+                <td><a href="Task6.html">Link 6</a></td>
             </tr>
             <tr>
                 <td>Task 7</td>
@@ -50,31 +50,31 @@
             </tr>
             <tr>
                 <td>Task 8</td>
-                <td><a href="task8.html">Link 8</a></td>
+                <td><a href="Task8.html">Link 8</a></td>
             </tr>
             <tr>
                 <td>Task 9</td>
-                <td><a href="task9.html">Link 9</a></td>
+                <td><a href="Task9.html">Link 9</a></td>
             </tr>
             <tr>
                 <td>Task 10</td>
-                <td><a href="task10.html">Link 10</a></td>
+                <td><a href="Task10.html">Link 10</a></td>
             </tr>
             <tr>
                 <td>Task 11</td>
-                <td><a href="task11.html">Link 11</a></td>
+                <td><a href="Task11.html">Link 11</a></td>
             </tr>
             <tr>
                 <td>Task 12</td>
-                <td><a href="task12.html">Link 12</a></td>
+                <td><a href="Task12.html">Link 12</a></td>
             </tr>
             <tr>
                 <td>Task 13</td>
-                <td><a href="task13.html">Link 13</a></td>
+                <td><a href="Task13.html">Link 13</a></td>
             </tr>
             <tr>
                 <td>Task 14</td>
-                <td><a href="task14.html">Link 14</a></td>
+                <td><a href="Task14.html">Link 14</a></td>
             </tr>
         </table>
     </center>
